# Allay

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: commit.yml  release.yml
allay/: __init__.py  json_parser.py  parser.py  plugin.py
tests/: dev-test.py  file.allay  sample.allay  test_dev.py
